[gd_scene load_steps=4 format=3 uid="uid://b7nl15vlkvu0w"]

[ext_resource type="Script" uid="uid://c3omqfnl4qasx" path="res://Code/player.gd" id="1_kyqiw"]
[ext_resource type="Texture2D" uid="uid://sm6rd1faqkqa" path="res://Acets/icon.svg" id="1_rpqav"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kyqiw"]
size = Vector2(16, 16)

[node name="Player" type="CharacterBody2D" groups=["Player"]]
script = ExtResource("1_kyqiw")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.125, 0.125)
texture = ExtResource("1_rpqav")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_kyqiw")

[node name="CoyoteTime" type="Timer" parent="." groups=["Player"]]
wait_time = 0.12
one_shot = true

[node name="No_damage_time" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="No_damage_time" to="." method="_on_no_damage_time_timeout"]
